Update project name and version to 0.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tree-sitter-cobol",
-  "version": "0.0.1",
+  "name": "tree-sitter-cobol-kanji",
+  "version": "0.1.0",
   "description": "COBOL grammar for tree-sitter",
   "main": "bindings/node",
   "scripts": {
