--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,34 @@ jobs:
       - name: Run NIST COBOL85 tests
         run: sh run_nist_cobol85.sh
 
+  test-python:
+    needs: check-workflows
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tree-sitter setuptools wheel
+
+      - name: Build Python bindings
+        run: python setup.py build
+
+      - name: Install package
+        run: pip install -e .
+
+      - name: Run Python tests
+        run: python -m unittest discover bindings/python/tests
+
       #- name: Upload results of NIST COBOL85 tests
       #  uses: actions/upload-artifact@v3
       #  with:
